Failed to fix TIFF, will need next release or build from source and fix the line of code